[gd_scene load_steps=14 format=2]

[ext_resource path="res://styles/MenuButton_Focus.tres" type="StyleBox" id=1]
[ext_resource path="res://styles/dialogPanel.tres" type="StyleBox" id=2]
[ext_resource path="res://styles/MenuButton_Normal.tres" type="StyleBox" id=3]
[ext_resource path="res://styles/MenuButton_Pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://styles/MenuButton_Disabled.tres" type="StyleBox" id=5]
[ext_resource path="res://styles/MenuButton_HoverFocus.tres" type="StyleBox" id=6]
[ext_resource path="res://styles/dialogButtonPanel.tres" type="StyleBox" id=7]
[ext_resource path="res://Options/sub_header_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://name_generation/UITitleFont.tres" type="DynamicFont" id=9]
[ext_resource path="res://GameNarrativeDisplay/BlurBackground.tscn" type="PackedScene" id=10]
[ext_resource path="res://Options/OptionsMenu.gd" type="Script" id=11]
[ext_resource path="res://Options/opt_header_font.tres" type="DynamicFont" id=12]
[ext_resource path="res://GameNarrativeDisplay/GamepadHint.tscn" type="PackedScene" id=13]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
layer = 14
script = ExtResource( 11 )

[node name="BlurBackground" parent="." instance=ExtResource( 10 )]

[node name="OptionsMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -360.0
margin_right = 320.0
margin_bottom = 368.0
custom_constants/separation = 0
alignment = 1

[node name="OptionsContainer" type="PanelContainer" parent="OptionsMenu"]
margin_top = 81.0
margin_right = 640.0
margin_bottom = 541.0
rect_min_size = Vector2( 0, 460 )
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/OptionsContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 620.0
margin_bottom = 440.0

[node name="ContainerName" type="Label" parent="OptionsMenu/OptionsContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 9 )
text = "OPTIONS & SETTINGS"
valign = 2

[node name="HSeparator" type="HSeparator" parent="OptionsMenu/OptionsContainer/VBoxContainer"]
self_modulate = Color( 1, 0.847059, 0.545098, 1 )
margin_top = 42.0
margin_right = 600.0
margin_bottom = 46.0

[node name="ContainerDescription" type="RichTextLabel" parent="OptionsMenu/OptionsContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 600.0
margin_bottom = 80.0
bbcode_enabled = true
bbcode_text = "Various game options.
"
text = "Various game options.
"
fit_content_height = true

[node name="Spacer" type="Control" parent="OptionsMenu/OptionsContainer/VBoxContainer"]
visible = false
margin_top = 50.0
margin_right = 600.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 12 )

[node name="ScrollContainer" type="ScrollContainer" parent="OptionsMenu/OptionsContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 600.0
margin_bottom = 420.0
rect_min_size = Vector2( 0, 300 )
mouse_filter = 1
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="OptionList" type="VBoxContainer" parent="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer"]
margin_right = 600.0
margin_bottom = 336.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="Spacer2" type="Control" parent="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList"]
margin_right = 600.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="ContainerName2" type="Label" parent="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList"]
margin_top = 12.0
margin_right = 600.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 12 )
text = "Video"
valign = 2

[node name="Spacer5" type="Control" parent="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList"]
margin_top = 46.0
margin_right = 600.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 10 )

[node name="FullscreenButton" type="CheckButton" parent="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList"]
margin_top = 58.0
margin_right = 600.0
margin_bottom = 98.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 8 )
text = "Fullscreen"

[node name="Scale" type="HBoxContainer" parent="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList"]
margin_top = 100.0
margin_right = 600.0
margin_bottom = 140.0

[node name="Spacer2" type="Control" parent="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList/Scale"]
margin_right = 2.0
margin_bottom = 40.0
rect_min_size = Vector2( 2, 12 )

[node name="Label" type="Label" parent="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList/Scale"]
margin_left = 6.0
margin_top = 9.0
margin_right = 284.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 8 )
text = "View Scale"

[node name="HSlider" type="HSlider" parent="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList/Scale"]
margin_left = 288.0
margin_right = 588.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 40 )
min_value = 0.25
max_value = 1.75
step = 0.25
value = 1.0
tick_count = 7
ticks_on_borders = true

[node name="Spacer3" type="Control" parent="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList/Scale"]
margin_left = 592.0
margin_right = 600.0
margin_bottom = 40.0
rect_min_size = Vector2( 8, 12 )

[node name="FPSButton" type="CheckButton" parent="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList"]
margin_top = 142.0
margin_right = 600.0
margin_bottom = 182.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 8 )
text = "Show FPS"

[node name="Spacer3" type="Control" parent="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList"]
margin_top = 184.0
margin_right = 600.0
margin_bottom = 198.0
rect_min_size = Vector2( 0, 14 )

[node name="ContainerName3" type="Label" parent="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList"]
margin_top = 200.0
margin_right = 600.0
margin_bottom = 232.0
custom_fonts/font = ExtResource( 12 )
text = "Audio"
valign = 2

[node name="Spacer4" type="Control" parent="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList"]
margin_top = 234.0
margin_right = 600.0
margin_bottom = 244.0
rect_min_size = Vector2( 0, 10 )

[node name="MusicButton" type="CheckButton" parent="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList"]
margin_top = 246.0
margin_right = 600.0
margin_bottom = 286.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 8 )
text = "Music"

[node name="SFXButton" type="CheckButton" parent="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList"]
margin_top = 288.0
margin_right = 600.0
margin_bottom = 328.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 8 )
text = "Sound Effects"

[node name="ButtonsContainer" type="PanelContainer" parent="OptionsMenu"]
margin_top = 541.0
margin_right = 640.0
margin_bottom = 613.0
custom_styles/panel = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsMenu/ButtonsContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 620.0
margin_bottom = 52.0
custom_constants/separation = 15
alignment = 1

[node name="Done" type="Button" parent="OptionsMenu/ButtonsContainer/HBoxContainer"]
margin_left = 164.0
margin_right = 292.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "DONE"

[node name="Defaults" type="Button" parent="OptionsMenu/ButtonsContainer/HBoxContainer"]
margin_left = 307.0
margin_right = 435.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "DEFAULTS"

[node name="GamepadSpacer" type="ColorRect" parent="OptionsMenu"]
margin_top = 613.0
margin_right = 640.0
margin_bottom = 623.0
rect_min_size = Vector2( 0, 10 )
color = Color( 1, 1, 1, 0 )

[node name="GamepadHint" parent="OptionsMenu" instance=ExtResource( 13 )]
margin_left = 0.0
margin_top = 623.0
margin_right = 640.0
margin_bottom = 647.0

[connection signal="toggled" from="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList/FullscreenButton" to="." method="_on_CheckButton_toggled"]
[connection signal="drag_ended" from="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList/Scale/HSlider" to="." method="_on_HSlider_drag_ended"]
[connection signal="drag_started" from="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList/Scale/HSlider" to="." method="_on_HSlider_drag_started"]
[connection signal="value_changed" from="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList/Scale/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList/FPSButton" to="." method="_on_FPSButton_toggled"]
[connection signal="toggled" from="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList/MusicButton" to="." method="_on_MusicButton_toggled"]
[connection signal="toggled" from="OptionsMenu/OptionsContainer/VBoxContainer/ScrollContainer/OptionList/SFXButton" to="." method="_on_SFXButton_toggled"]
[connection signal="pressed" from="OptionsMenu/ButtonsContainer/HBoxContainer/Done" to="." method="_on_Done_pressed"]
[connection signal="pressed" from="OptionsMenu/ButtonsContainer/HBoxContainer/Defaults" to="." method="_on_Defaults_pressed"]
